--- a/index.html
+++ b/index.html
@@ -15,3 +15,20 @@
 <h1> titulo da pagina </h1>
 <dic class="primeiroparagrafo">
 <h3> titulo do texto 01 
+<p><i><b> texto descritivo 01 </b></i></p>
+<vl  id="lista">
+<li>  item 01 </li>
+<li>  item 02 </li>
+<li> item 03 </li>
+</ul>      
+</diu>
+<div class= "segundoparagrafo">
+<h3> titulo texto 02 </h3>
+<p> texto descritivo 02 </p>
+</div>
+<h1>***</h1>
+</main>
+<fouter><p><img id= "tituloimagem" src= "nomearquivo.png" alt= "descricaoimagem" ><p/>
+</footer>
+</body>
+</html>
