--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <read>
 <meta charset="utf-8">
 <meta http-equiv='x-ur-compatible'content='ie=edge'>
-<tittle>titulo da aba </tittle>
+<tittle> padaria do chefe </tittle>
 <meta name= 'viewport' content = 'width=device-widtch,initialscale=1'>
 <link rel="'stylesheet'type='text/css'media='screen' href=style.css'>
 <script src='main.js'></script>
@@ -12,8 +12,8 @@
 <header><p><ing id="tituloimagem" src="nomedoarquivo.png" alt="descrição imagem"></p>
 </header>
 <main>
-<h1> titulo da pagina </h1>
-<dic class="primeiroparagrafo">
+<h1> padaria do chefe</h1>
+<dic class="localizada na av. das torres n 125">
 <h3> titulo do texto 01 
 <p><i><b> texto descritivo 01 </b></i></p>
 <vl  id="lista">
