--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 <main>
 <h1> padaria do chefe</h1>
 <dic class="localizada na av. das torres n 125">
-<h3> titulo do texto 01 
-<p><i><b> texto descritivo 01 </b></i></p>
+<h3> padaria
+<p><i><b> menu:</b></i></p>
 <vl  id="lista">
-<li>  item 01 </li>
-<li>  item 02 </li>
-<li> item 03 </li>
+<li> -pao </li> 
+<li> -bolo de pote </li>
+<li> -pao de queijo </li>
 </ul>      
 </diu>
-<div class= "segundoparagrafo">
+<div class= a padaria da familia>
 <h3> titulo texto 02 </h3>
-<p> texto descritivo 02 </p>
+<p> foi fundada em 1950 </p>
 </div>
 <h1>***</h1>
 </main>
