--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 <read>
 <meta charset="utf-8">
-<meta http-equiv='x-ur-compatible'content='ie=edge'>
+<meta http-equiv='x-ue-compatible' content='ie=edge'>
 <tittle> padaria do chefe </tittle>
-<meta name= 'viewport' content = 'width=device-widtch,initialscale=1'>
-<link rel="'stylesheet'type='text/css'media='screen' href=style.css'>
+<meta name= 'viewport' content = 'width=device-widtch,initial-scale=1'>
+<link rel='stylesheet' type='text/css' media='screen' href=style.css'>
 <script src='main.js'></script>
 </head>
 <body>
@@ -23,7 +23,7 @@
 </ul>      
 </diu>
 <div class= a padaria da familia>
-<h3> titulo texto 02 </h3>
+<h3> pa5 </h3>
 <p> foi fundada em 1950 </p>
 </div>
 <h1>***</h1>
