--- a/index.html
+++ b/index.html
@@ -9,21 +9,19 @@
 <script src='main.js'></script>
 </head>
 <body>
-<header><p><ing id="tituloimagem" src="nomedoarquivo.png" alt="descrição imagem"></p>
+<header><p><img id="tituloimagem" src="nomedoarquivo.png" alt="descrição imagem"></p>
 </header>
 <main>
 <h1> padaria do chefe</h1>
-<dic class="localizada na av. das torres n 125">
-<h3> padaria
+<div class="primeiroparagrafo">
+<h3> localizada na av. das torres n 125</h3>
 <p><i><b> menu:</b></i></p>
-<vl  id="lista">
+<ul  id="lista">
 <li> -pao </li> 
 <li> -bolo de pote </li>
 <li> -pao de queijo </li>
 </ul>      
-</diu>
-<div class= a padaria da familia>
-<h3> pa5 </h3>
+<h3>a padaria da familia</h3>
 <p> foi fundada em 1950 </p>
 </div>
 <h1>***</h1>
