--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<read>
+<head>
 <meta charset="utf-8">
 <meta http-equiv='x-ue-compatible' content='ie=edge'>
 <tittle> padaria do chefe </tittle>
