--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 <head>
 <meta charset="utf-8">
-<meta http-equiv='x-ue-compatible' content='ie=edge'>
+<meta http-equiv='x-ua-compatible' content='ie=edge'>
 <tittle> padaria do chefe </tittle>
 <meta name= 'viewport' content = 'width=device-widtch,initial-scale=1'>
-<link rel='stylesheet' type='text/css' media='screen' href=style.css'>
+<link rel='stylesheet' type='text/css' media='screen' href='style.css'>
 <script src='main.js'></script>
 </head>
 <body>
-<header><p><img id="tituloimagem" src="nomedoarquivo.png" alt="descrição imagem"></p>
+<header><p><img id="tituloimagem" src="nomedoarquivo.png" alt="descriimagem"></p>
 </header>
 <main>
 <h1> padaria do chefe</h1>
