--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <script src='main.js'></script>
 </head>
 <body>
-<header><p><img id="tituloimagem" src="nomedoarquivo.png" alt="descriimagem"></p>
+<header><p><img id="logositea" src="logosite.jpeg" alt="descriimagem"></p>
 </header>
 <main>
 <h1> padaria do chefe</h1>
